Added index.html primary skeleton

--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Awsome Book</title>
+    </head>
+    <body>
+        <h1>Awsome Book</h1>
+        <div class="container-section">
+
+        </div>
+        <hr>
+        <h2>Add new Book</h2>
+        <form id="book-form">
+            <input type="text" placeholder="Title" name="title" class="book-title"><br>
+            <input type="text" placeholder="Author" name="author" class="book-author"><br>
+            <button class="add-btn" type="submit">Add</button>
+        </form>
+        <script src="index.js"></script>
+    </body>
 </html>
