Add the js code

--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
             <input type="text" placeholder="Author" name="author" class="book-author"><br>
             <button class="add-btn" type="submit">Add</button>
         </form>
-        <script src="index.js"></script>
+        <script src="assets/js/main.js"></script>
     </body>
 </html>
