--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <form id="book-form">
             <input type="text" placeholder="Title" name="title" class="book-title"><br>
             <input type="text" placeholder="Author" name="author" class="book-author"><br>
-            <button class="btn-add" type="submit">Add Books</button>
+            <button class="add-button" type="submit">Add Books</button>
         </form>
         <script src="assets/js/main.js"></script>
     </body>
