--- a/index.html
+++ b/index.html
@@ -5,20 +5,32 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Awsome Book</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
-        <h1>Awsome Book</h1>
-        <div class="container-section">
-           
-        </div>
-        <hr>
-        <h2>Add new Book</h2>
-        <form id="book-form">
-            <input type="text" placeholder="Title" name="title" class="book-title"><br>
-            <input type="text" placeholder="Author" name="author" class="book-author"><br>
-            <button class="add-button" type="submit">Add Books</button>
-        </form>
+      <section class="container">
+        <section class="row book-list-row">
+          <section class="col-12">
+            <h1>All awsome books</h1>
+            <table class="table table-striped table-hover table-book-list">
+              <tbody class="booklist-table">
+              </tbody>
+            </table>
+          </section>
+        </section>
+        <section class="row add-book-row">
+          <section class="col-12">
+            <h2>Add new Book</h2>
+            <form id="book-form">
+                <input type="text" placeholder="Title" name="title" class="book-title"><br>
+                <input type="text" placeholder="Author" name="author" class="book-author"><br>
+                <button class="add-button" type="submit">Add Books</button>
+            </form>
+          </section>
+        </section>
+      </section>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         <script src="assets/js/main.js"></script>
     </body>
 </html>
