Update Js & Css file V2

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
         </section>
         <section class="row add-book-row">
           <section class="col-12">
-            <h2>Add new Book</h2>
+            <div class="horizon-sign"></div>
+            <h2>Add a new book</h2>
             <form id="book-form">
                 <input type="text" placeholder="Title" name="title" class="book-title"><br>
                 <input type="text" placeholder="Author" name="author" class="book-author"><br>
-                <button class="add-button" type="submit">Add Books</button>
+                <button class="btn btn-light add-button" type="submit">Add</button>
             </form>
           </section>
         </section>
