--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
+      <header>
+        <nav class="navbar">
+            <a href="" class="awsome-book">Awesome Books</a>
+            <ul class="nav-list">
+                <li><a href="" class="nav-item">List</a></li>
+                <li><a href="" class="nav-item">Add new</a></li>
+                <li><a href="" class="nav-item">Contact</a></li>
+            </ul>
+        </nav>
+      </header>
+      <div class="time">
+        <p>March 19th 2021, 9:25:32 am</p>
+      </div>
       <section class="container">
         <section class="row book-list-row">
           <section class="col-12">
