--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <nav class="navbar">
             <a href="" class="awsome-book">Awesome Books</a>
             <ul class="nav-list">
-                <li><a href="" class="nav-item">List</a></li>
-                <li><a href="" class="nav-item">Add new</a></li>
-                <li><a href="" class="nav-item">Contact</a></li>
+                <li><a href="#" data-target="book-list-row" class="nav-item nav-active">List</a></li>
+                <li><a href="#" data-target="add-book-row" class="nav-item">Add new</a></li>
+                <li><a href="#" data-target="contact" class="nav-item">Contact</a></li>
             </ul>
         </nav>
       </header>
@@ -23,6 +23,8 @@
         <p>March 19th 2021, 9:25:32 am</p>
       </div>
       <section class="container">
+
+        <!-- This section contains table of book list -->
         <section class="row book-list-row">
           <section class="col-12">
             <h1>All awsome books</h1>
@@ -32,6 +34,8 @@
             </table>
           </section>
         </section>
+
+        <!-- This section contains "add book" interface -->
         <section class="row add-book-row">
           <section class="col-12">
             <div class="horizon-sign"></div>
@@ -42,6 +46,30 @@
                 <button class="btn btn-light add-button" type="submit">Add</button>
             </form>
           </section>
+        </section>
+
+        <!-- This section contains contact content -->
+        <section class="row contact">
+          <section class="col-12">
+            <h2>Contact information</h2>
+          </section>
+          <acricle class="contact-info">
+            <p>
+              Do have any questions or you just want to say "Hello":<br>
+              You can reach out to us!
+            </p>
+            <ul class="contact-address">
+              <li>
+                Our e-mail: contact@gmail.com
+              </li>
+              <li>
+                Our phone number: 999 999 9999
+              </li>
+              <li>
+                Our address: Streetname 22, 84503 City, Country
+              </li>
+            </ul>
+          </acricle>
         </section>
       </section>
         <script src="assets/js/main.js"></script>
