Added Js for dynamic content section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </header>
 
       <div class="time">
-        <p id="date-time">March 19th 2021, 9:25:32 am</p>
+        <p id="date-time"></p>
       </div>
 
       <section class="container">
