--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       <footer>
         <div class="footer">
-         <p>Copyright @Omar_Sadaf <span id="footer-year"></span></p>
+         <p>Copyright @Aqurd <span id="footer-year"></span></p>
         </div>
       </footer>
       <script type="module" src="./assets/js/main.js"></script>
