--- a/index.html
+++ b/index.html
@@ -79,5 +79,6 @@
         </div>
       </footer>
       <script type="module" src="./assets/js/main.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/luxon@3.3.0/build/global/luxon.min.js"></script>
     </body>
 </html>
