--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Awsome Book</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/index.css">
     </head>
     <body>
       <header>
@@ -78,7 +78,7 @@
          <p>Copyright @Aqurd <span id="footer-year"></span></p>
         </div>
       </footer>
-      <script type="module" src="./assets/js/main.js"></script>
+      <script type="module" src="./assets/js/index.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/luxon@3.3.0/build/global/luxon.min.js"></script>
     </body>
 </html>
